# polymul

./: .clang-format  Doxyfile  LICENSE  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
examples/: example.cpp
include/: polymul.h
tests/: benchmark.cpp  polymul_test.cpp
